[gd_scene format=3 uid="uid://bcdto52kfdap6"]

[ext_resource type="Script" uid="uid://bdpigkki1bjc3" path="res://New/MiniGames/ShortSimonSays/short_simon_says.gd" id="1_fukdu"]
[ext_resource type="PackedScene" uid="uid://cb083mnw8oavl" path="res://New/Util/Components/color_base.tscn" id="1_j4xno"]

[node name="ShortSimonSays" type="Node2D" unique_id=681627167 groups=["Mini_games"]]
script = ExtResource("1_fukdu")

[node name="ColorRect" type="ColorRect" parent="." unique_id=8515501]
offset_right = 1168.0
offset_bottom = 672.0
mouse_filter = 2
color = Color(0.96408325, 0.97333914, 0.99999934, 1)

[node name="SimonColor" parent="." unique_id=587670066 instance=ExtResource("1_j4xno")]
position = Vector2(576, 296)
clickable = false

[node name="ProgressBar" type="ProgressBar" parent="." unique_id=1829124234]
offset_left = 8.0
offset_right = 56.0
offset_bottom = 664.0
value = 73.96
fill_mode = 3

[node name="ColorOptions" type="Node2D" parent="." unique_id=1391916633]

[node name="ColorBase" parent="ColorOptions" unique_id=441243205 instance=ExtResource("1_j4xno")]
position = Vector2(176, 96)

[node name="ColorBase2" parent="ColorOptions" unique_id=1712824745 instance=ExtResource("1_j4xno")]
position = Vector2(584, 104)

[node name="ColorBase3" parent="ColorOptions" unique_id=959584945 instance=ExtResource("1_j4xno")]
position = Vector2(952, 104)

[node name="ColorBase4" parent="ColorOptions" unique_id=790960536 instance=ExtResource("1_j4xno")]
position = Vector2(184, 528)

[node name="ColorBase5" parent="ColorOptions" unique_id=978374872 instance=ExtResource("1_j4xno")]
position = Vector2(584, 528)

[node name="ColorBase6" parent="ColorOptions" unique_id=1926050562 instance=ExtResource("1_j4xno")]
position = Vector2(952, 536)

[node name="ShowColor" type="Timer" parent="." unique_id=415500533]
one_shot = true

[node name="PuzzleTimer" type="Timer" parent="." unique_id=1412117234]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="PuzzleTimer" to="." method="_on_puzzle_timer_timeout"]
